about page fixed on mobile

--- a/frontend_react/src/App.scss
+++ b/frontend_react/src/App.scss
@@ -53,7 +53,7 @@
   z-index: 1;
   position: fixed;
   padding: 1rem;
-  top: 12%;
+  top: 4rem;
   right: 3rem;
   transform: scale(0.5);
 
@@ -62,7 +62,13 @@
     top: 1rem;
     z-index: 2;
     right: 50%;
+    transform: scale(0.4);
 
+  }
+
+  @media screen and (max-width: 400px) {
+    
+    transform: scale(0.3);
 
   }
 
@@ -238,7 +244,7 @@
 
 .small-p-text {
   font-family: Cantarell;
-  font-size: clamp(0.8rem, 1.5vw, 1.4rem);
+  font-size: clamp(0.7rem, 1.3vw, 1.4rem);
   text-align: left;
   color: var(--color-white);
   line-height: 1.5;
