--- a/frontend_react/src/components/Navbar/Navbar.scss
+++ b/frontend_react/src/components/Navbar/Navbar.scss
@@ -1,6 +1,6 @@
 .app__navbar {
-  width: 99vw;
-  height: 80px;
+  width: 100vw;
+  height: 4rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
